--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "next build",
     "export": "next build && next export",
     "start": "next start",
+    "start:static": "npx http-server ./out -c-1",
     "lint": "next lint"
   }
 }
